--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <button id="create-new-button" class="w-full mb-4 py-3 px-6 bg-green-600 hover:bg-green-700 text-white font-bold rounded-lg transition-colors duration-200 shadow-md">
                 新しいマテリアルを作成
             </button>
-            <label for="skm-file" class="block text-gray-700 font-semibold mb-2">skmファイルをアップロード</label>
+            <label for="skm-file" class="block text-gray-700 font-semibold mb-2">skmファイルの読み込みはこちら↓</label>
             <div class="flex items-center justify-center w-full">
                 <label for="skm-file" class="flex flex-col items-center justify-center w-full h-32 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 hover:bg-gray-100 transition-colors duration-200">
                     <div class="flex flex-col items-center justify-center pt-5 pb-6">
                         <svg class="w-8 h-8 mb-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
                         </svg>
-                        <p class="mb-2 text-sm text-gray-500"><span class="font-semibold">クリックしてアップロード</span> またはドラッグ＆ドロップ</p>
+                        <p class="mb-2 text-sm text-gray-500"><span class="font-semibold">クリックして読み込み</span> またはドラッグ＆ドロップ</p>
                         <p class="text-xs text-gray-500">.skmファイル</p>
                     </div>
                     <input id="skm-file" type="file" class="hidden" accept=".skm" />
@@ -665,3 +665,4 @@
     </script>
 </body>
 </html>
+
