--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div id="editor-section" class="hidden">
             <div class="flex justify-end mb-4">
                 <button id="cancel-edit-button" class="py-2 px-4 bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold rounded-lg transition-colors duration-200 shadow-md">
-                    編集をやり直す
+                    再読み込み
                 </button>
             </div>
             <h2 class="text-xl font-bold mb-4 text-gray-800">マテリアルパラメータの編集</h2>
@@ -665,4 +665,5 @@
     </script>
 </body>
 </html>
+
 
