--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- マテリアル名 -->
                 <div class="col-span-2">
-                    <label for="material-name" class="block text-sm font-medium text-gray-700">マテリアル名</label>
+                    <label for="material-name" class="block text-sm font-medium text-gray-700">➡️マテリアル名を入力</label>
                     <input type="text" id="material-name" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500">
                 </div>
                 
                 <!-- Type選択 -->
                 <div class="col-span-2">
-                    <label for="material-type" class="block text-sm font-medium text-gray-700">マテリアルタイプ</label>
+                    <label for="material-type" class="block text-sm font-medium text-gray-700">➡️マテリアルタイプを選択（単色／テクスチャを使用する）</label>
                     <select id="material-type" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500">
                         <option value="0">単色</option>
                         <option value="1">テクスチャを使用する</option>
@@ -146,7 +146,7 @@
                     <div class="flex items-center gap-4 mb-2">
                         <div id="color-preview" class="w-20 h-20 rounded-md border border-gray-300"></div>
                         <div class="flex-1">
-                            <label for="color-picker" class="block text-sm font-medium text-gray-700">カラーピッカー</label>
+                            <label for="color-picker" class="block text-sm font-medium text-gray-700">➡️カラーピッカーまたはスライダーで色を選択</label>
                             <input type="color" id="color-picker" value="#000000" class="mt-1 block w-full h-10 border-none rounded-md cursor-pointer">
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                 
                 <!-- useTrans 設定 -->
                 <div id="usetrans-section" class="col-span-2 mt-4">
-                    <label for="usetrans" class="block text-sm font-medium text-gray-700">透明度を有効化</label>
+                    <label for="usetrans" class="block text-sm font-medium text-gray-700">➡️透明度（無効／有効）</label>
                     <select id="usetrans" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500">
                         <option value="1">有効</option>
                         <option value="0">無効</option>
@@ -665,6 +665,7 @@
     </script>
 </body>
 </html>
+
 
 
 
