--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</p>
             <div class="flex items-center">
                 <input type="checkbox" id="disclaimer-checkbox" class="rounded text-indigo-600 focus:ring-indigo-500">
-                <label for="disclaimer-checkbox" class="ml-2 text-sm font-bold text-gray-800">利用上の注意を守り、免責事項に同意します</label>
+                <label for="disclaimer-checkbox" class="ml-2 text-sm font-bold text-gray-800">利用上の注意を守り、免責事項に同意してツールを利用します</label>
             </div>
         </div>
         
@@ -741,3 +741,4 @@
     </script>
 </body>
 </html>
+
