--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>本ツールは、SketchUp Free向けの非公式ツールです。開発元（Trimble社）とは一切関係がなく、公式サポートの対象外となります。また、本ツールは、個人の学習や趣味の範囲での利用を目的として公開しています。ご利用にあたっては、以下のことを守ってください。</p>
                     <ul class="list-disc list-inside space-y-1 ml-4">
                         <li>商用利用しない</li>
-                        <li>本ツールで生成した .skmファイルを3D Warehouseで共有しない</li>
+                        <li>本ツールで生成した .skmファイルを3D Warehouseで公開しない</li>
                         <li>その他、第三者の権利を侵害する行為をしない</li>
                     </ul>
                 </div>
@@ -741,4 +741,5 @@
     </script>
 </body>
 </html>
+
 
