--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl w-full">
         <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">SketchUp マテリアル簡易エディター</h1>
         <p class="text-center text-gray-600 mb-8">
-            SketchUp Freeユーザー向けのマテリアルエディターです。マテリアルの新規作成、またはskmファイルを読み込んで、マテリアルパラメータを編集、新しいファイルで保存できます。
+            SketchUp Freeユーザー向けのマテリアルエディターです。マテリアルの新規作成、またはskmファイルを読み込んで、マテリアルパラメータを編集、skmファイルで保存できます。
         </p>
 
         <!-- メッセージ表示エリア -->
@@ -741,5 +741,6 @@
     </script>
 </body>
 </html>
+
 
 
